fix: remove overflow hidden

--- a/src/components/Landscape/Landscape.scss
+++ b/src/components/Landscape/Landscape.scss
@@ -1,6 +1,3 @@
-*{
-  overflow: hidden;
-}
 /* src/Landscape.scss */
 .landscape {
   position: relative;
